# swappery-dex

./: .gitignore  Cargo.toml  Makefile  README.md
contract/: Cargo.toml
contract/src/erc20/src/: lib.rs
contract/src/factory-contract/: Cargo.toml
contract/src/factory-contract/src/: entry_points.rs  feeto.rs  helper.rs  main.rs  pair_list.rs  reserves.rs
contract/src/pair-contract/: Cargo.toml
contract/src/pair-contract/src/: constants.rs  entry_points.rs  error.rs  helpers.rs  lib.rs  main.rs  reserves.rs  tokens.rs  variables.rs
contract/src/router-contract/: Cargo.toml
contract/src/router-contract/src/: main.rs
contracts/erc20/: Cargo.toml
contracts/erc20/src/: lib.rs
contracts/factory-contract/: Cargo.toml
contracts/factory-contract/src/: feeto.rs  helpers.rs  main.rs  pair_list.rs
contracts/pair-contract/: Cargo.toml
contracts/pair-contract/src/: allowances.rs  balances.rs  constants.rs  entry_points.rs  error.rs  helpers.rs  lib.rs  main.rs  total_supply.rs  variables.rs
contracts/router-contract/: Cargo.toml
contracts/router-contract/src/: constants.rs  entry_points.rs  error.rs  event.rs  helpers.rs  main.rs  pair_list.rs  wcspr.rs
testing/erc20-token/: Cargo.toml
testing/test-pair/src/: pair_tests.rs  test_fixture.rs
testing/test_pair/: Cargo.toml
testing/test_pair/src/: test_fixture.rs
tests/: Cargo.toml
tests/src/: constants.rs  lib.rs  swappery_pair_tests.rs  swappery_router_test.rs  test_call.rs
tests/test-pair/: Cargo.toml
tests/test-pair/src/: lib.rs  swappery_pair_tests.rs  test_fixture.rs
