[workspace]
members = [
    "contracts/pair-contract",
    "contracts/factory-contract",
    "contracts/router-contract",
    "testing/test-pair",
    "testing/erc20-token"
]
default-members = [
    "contracts/pair-contract",
    "contracts/router-contract",
    "contracts/factory-contract",
    "testing/test-pair",
    "testing/erc20-token"
]

[profile.release]
codegen-units = 1
lto = true