[workspace]
members = [
    "contracts/pair-contract",
    "contracts/factory-contract",
    "contracts/router-contract",
    "tests/test-pair",
    "tests/erc20-token"
]
default-members = [
    "contracts/pair-contract",
    "contracts/router-contract",
    "contracts/factory-contract",
    "tests/test-pair",
    "tests/erc20-token"
]

[profile.release]
codegen-units = 1
lto = true