[workspace]
members = [
    "contracts/pair-contract",
    "contracts/factory-contract",
    "contracts/router-contract",
    "tests/test-pair"
]
default-members = [
    "contracts/pair-contract",
    "contracts/router-contract",
    "contracts/factory-contract",
    "tests/test-pair"
]

[profile.release]
codegen-units = 1
lto = true