[package]
name = "factory-contract"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "factory_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
swappery-pair = { path = "../pair-contract" }
once_cell = { version = "1.8.0", default-features = false }
hex = { version = "0.4.3", default-features = false }