[package]
name = "swappery-pair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "swappery_pair"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
once_cell = { version = "1.8.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["casper-contract/std", "casper-types/std"]