[package]
name = "factory-contract"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "factory_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper-erc20 = "0.2.1"
once_cell = { version = "1.10.0", default-features = false }
hex = { version = "0.4.3", default-features = false }