[package]
name = "pair-tests"
version = "0.1.0"
edition = "2018"

[dev-dependencies]
casper-engine-test-support = { version = "1.3.2", features = ["test-support"] }
casper-erc20 = { path = "../../contracts/erc20" }
casper-types = "1.3.2"
base64 = "0.13.0"
blake2 = "0.9.2"
hex = "0.4.3"

[[bin]]
name = "pair-tests"
path = "src/pair_tests.rs"
bench = false
doctest = false