[package]
name = "factory-contract"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "factory_contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"
casper-erc20 = { path = "../erc20" }
swappery-pair = { path = "../pair-contract" }